--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <div class="error-message" id="error-message"></div>
     <form action="/create-user" method="POST">
       <div class="form-group row">
-        <label for="username" class="col-sm-2 col-form-label">Username:</label>
+        <label for="username" class="col-sm-2 col-form-label">Usernamer:</label>
         <div class="col-sm-10">
           <input
             type="text"
